# ratepredict

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  config.py  macro_calendar.py  main.py  schemas.py  signal_log.csv  streamlit_app.py
app/services/: artifacts.py  features.py  gemini.py  gemini_ai.py  inference.py  market_data.py  news_aggregator.py
app/static/: app.css  app.js
app/templates/: index.html
artifacts/: cv_results.csv  feature_cols.json  feature_importance.csv  lgbm_model.pkl  model_metadata.json  ridge_model.pkl  scaler.pkl  usdngn_training_pipeline.ipynb  xgb_model.pkl
data/latest/: external_daily.csv  quidax_runtime_2h.csv
docs/: acceptance_gatebook.md  data_contracts.md  model_governance_standard.md  operating_modes_and_runbooks.md  runtime_data_pipeline.md  training_blueprint.md  world_class_production_methodology_v3.md
ratepredict/: __init__.py  policy.py  types.py
scripts/: refresh_runtime_data.py
tests/: test_live_inference.py  test_policy.py
