[project]
name = "ratepredict-live"
version = "0.1.0"
description = "Production-grade live inference app for Quidax USD/NGN decision intelligence"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn>=0.41.0",
  "pandas>=3.0.1",
  "numpy>=2.4.3",
  "yfinance>=1.2.0",
  "scikit-learn==1.6.1",
  "xgboost>=3.2.0",
  "lightgbm>=4.6.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.13.1",
  "jinja2>=3.1.6",
  "streamlit>=1.41.0",
  "plotly>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
