[project]
name = "ratepredict-live"
version = "0.1.0"
description = "Production-grade live inference app for Quidax USD/NGN decision intelligence"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.41.0",
  "plotly>=5.18.0",
  "pandas>=1.5.0,<3",
  "numpy>=1.24.0",
  "yfinance>=0.2.30",
  "scikit-learn==1.6.1",
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
  "httpx>=0.25.0",
  "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
